force-app/main/default/objects/CampaignMember/fields/Project_Role__c.field-meta.xml
<CustomField>
    <fullName>Project_Role__c</fullName>
    <label>Project Role</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>