force-app/main/default/objects/CampaignMember/fields/Project_Role_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Project_Role_Subscriptions__c</fullName>
    <description>Mailing List Subscriptions</description>
    <label>Project Role Subscriptions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voting Contact</fullName>
            </value>
            <value>
                <fullName>Marketing Contact</fullName>
            </value>
            <value>
                <fullName>Marketing Contact 2</fullName>
            </value>
            <value>
                <fullName>Marketing Contact 3</fullName>
            </value>
            <value>
                <fullName>Technical Contact</fullName>
            </value>
            <value>
                <fullName>Technical Contact 2</fullName>
            </value>
            <value>
                <fullName>Technical Contact 3</fullName>
            </value>
            <value>
                <fullName>Billing Contact</fullName>
            </value>
            <value>
                <fullName>Billing Contact 2</fullName>
            </value>
            <value>
                <fullName>Billing Contact 3</fullName>
            </value>
            <value>
                <fullName>Press Contact</fullName>
            </value>
            <value>
                <fullName>Legal Contact</fullName>
            </value>
            <value>
                <fullName>Event Sponsorship</fullName>
            </value>
            <value>
                <fullName>PO Contact</fullName>
            </value>
            <value>
                <fullName>Authorized Signatory</fullName>
            </value>
            <value>
                <fullName>Governing Board</fullName>
                <isActive>false</isActive>
                <label>Governing Board</label>
            </value>
            <value>
                <fullName>Marketing Committee</fullName>
                <isActive>false</isActive>
                <label>Marketing Committee</label>
            </value>
            <value>
                <fullName>SIG</fullName>
                <isActive>false</isActive>
                <label>SIG</label>
            </value>
            <value>
                <fullName>TOC</fullName>
                <isActive>false</isActive>
                <label>TOC</label>
            </value>
            <value>
                <fullName>Technical Steering Committee (TSC) TAC Private</fullName>
                <isActive>false</isActive>
                <label>Technical Steering Committee (TSC) TAC Private</label>
            </value>
            <value>
                <fullName>Working Group</fullName>
                <isActive>false</isActive>
                <label>Working Group</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>