force-app/main/default/objects/CampaignMember/fields/Registered_for_next_Bootcamp__c.field-meta.xml
<CustomField>
    <fullName>Registered_for_next_Bootcamp__c</fullName>
    <label>Registered for next Bootcamp?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>