force-app/main/default/objects/CampaignMember/fields/Repo_Location__c.field-meta.xml
<CustomField>
    <fullName>Repo_Location__c</fullName>
    <label>Repo Location</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>