force-app/main/default/objects/CampaignMember/fields/Skip_Mass_Disposition_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Skip_Mass_Disposition_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field should not be on any page layouts. This field is necessary to make sure that Auto Dispositioned updates to Campaign Member statuses are not pushed out to other Campaigns, but human-dispositioned updates to Campaign Member statuses ARE pushed out to other Campaigns.</description>
    <label>Skip Mass Disposition Trigger</label>
    <type>Checkbox</type>
</CustomField>