force-app/main/default/objects/CampaignMember/fields/Special_Topics__c.field-meta.xml
<CustomField>
    <fullName>Special_Topics__c</fullName>
    <label>Interested in Special Topics</label>
    <length>250</length>
    <type>Text</type>
</CustomField>