force-app/main/default/objects/CampaignMember/fields/Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Date__c</fullName>
    <description>If Status was updated as a result of Auto-Dispositioning, date that the Status was last updated.</description>
    <inlineHelpText>If Status was updated as a result of Auto-Dispositioning, date that the Status was last updated.</inlineHelpText>
    <label>Status Date</label>
    <type>Date</type>
</CustomField>