force-app/main/default/objects/CampaignMember/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <description>If Status was updated as a result of Auto-Dispositioning, the reason why the status chosen was selected by the Auto-Dispositioning code.</description>
    <inlineHelpText>If Status was updated as a result of Auto-Dispositioning, the reason why the status chosen was selected by the Auto-Dispositioning code.</inlineHelpText>
    <label>Status Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>