force-app/main/default/objects/CampaignMember/fields/Submission_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date_Time__c</fullName>
    <label>Submission Date/Time</label>
    <type>Date</type>
</CustomField>