force-app/main/default/objects/CampaignMember/fields/Submission_URL__c.field-meta.xml
<CustomField>
    <fullName>Submission_URL__c</fullName>
    <label>Submission URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>