force-app/main/default/objects/CampaignMember/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <description>Used for Marketing Cloud Subscriptions for Campaign Members</description>
    <inlineHelpText>Used for Marketing Cloud Subscription center</inlineHelpText>
    <label>Subscription</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subscription</valueSetName>
    </valueSet>
</CustomField>