force-app/main/default/objects/CampaignMember/fields/System_Administration__c.field-meta.xml
<CustomField>
    <fullName>System_Administration__c</fullName>
    <formula>Campaign.System_Administration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Administration</label>
    <type>Checkbox</type>
</CustomField>