force-app/main/default/objects/CampaignMember/fields/Systems_Engineering_Architecture__c.field-meta.xml
<CustomField>
    <fullName>Systems_Engineering_Architecture__c</fullName>
    <formula>Campaign.Systems_Engineering_Architecture__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Systems Engineering &amp; Architecture</label>
    <type>Checkbox</type>
</CustomField>