force-app/main/default/objects/CampaignMember/fields/Topics_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Topics_of_Interest__c</fullName>
    <label>Topics of Interest</label>
    <length>250</length>
    <type>Text</type>
</CustomField>