force-app/main/default/objects/CampaignMember/fields/What_is_open_source_license_for_project__c.field-meta.xml
<CustomField>
    <fullName>What_is_open_source_license_for_project__c</fullName>
    <label>What is open source license for project</label>
    <length>40</length>
    <type>Text</type>
</CustomField>