force-app/main/default/objects/CampaignMember/fields/X60_Day_Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>X60_Day_Promo_Code__c</fullName>
    <label>60 Day Promo Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>