force-app/main/default/objects/CampaignMember/listViews/DENT_Campaign_Test.listView-meta.xml
<ListView>
    <fullName>DENT_Campaign_Test</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>STATUS</columns>
    <columns>NAME</columns>
    <columns>COMPANY</columns>
    <columns>FIRST_NAME</columns>
    <columns>LAST_NAME</columns>
    <columns>TITLE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>MC_Project_ID__c</field>
        <operation>equals</operation>
        <value>a092M00001IbJGwQAN</value>
    </filters>
    <label>DENT Campaign Test</label>
</ListView>